--- a/ubuntu-pp.yml
+++ b/ubuntu-pp.yml
@@ -249,7 +249,12 @@
       - name: Install Drawio...
         become: true
         apt:  
-          deb: https://github.com/jgraph/drawio-desktop/releases/download/v24.1.0/drawio-amd64-24.1.0.deb    
+          deb: https://github.com/jgraph/drawio-desktop/releases/download/v24.1.0/drawio-amd64-24.1.0.deb 
+
+      - name: Install flameshot 0.8.0...
+        become: true
+        apt:
+          deb: https://github.com/flameshot-org/flameshot/releases/download/v0.8.0/flameshot_ubuntu_0.8.0-1_amd64.deb
           
       - name: Install eksctl        
         shell: |
