--- a/ubuntu.yml
+++ b/ubuntu.yml
@@ -32,8 +32,7 @@
           - gnupg-agent
           - zsh          
           - fonts-hack
-          - tilix
-          - virtualbox
+          - tilix          
           - mlocate
           - krita
           - jq
@@ -119,10 +118,10 @@
           name: google-chrome-stable
 
     - block:
-      - name: Installing Vagrant 2.2.18
+      - name: Installing Vagrant...
         become: true
         unarchive:
-          src: 'https://releases.hashicorp.com/vagrant/2.2.18/vagrant_2.2.18_linux_amd64.zip'
+          src: 'https://releases.hashicorp.com/vagrant/2.4.3/vagrant_2.4.3_linux_amd64.zip'
           dest: /usr/local/bin
           remote_src: yes
 
@@ -247,26 +246,12 @@
           state: link
         with_items:
           - kubectx
-          - kubens          
-
-    - block: 
-      - name: Install Brave Key
-        become: true
-        apt_key:
-          url: 'https://brave-browser-apt-release.s3.brave.com/brave-core.asc'
-          state: present
-
-      - name: Install Brave Repository
-        become: true
-        apt_repository:
-          repo: 'deb [arch=amd64] https://brave-browser-apt-release.s3.brave.com/ stable main'
-          state: present
-          filename: brave
-
-      - name: Install Brave Browser
+          - kubens   
+          
+      - name: Install VirtualBox 7.0
         become: true
         apt:
-          name: brave-browser
+          deb: https://download.virtualbox.org/virtualbox/7.0.22/virtualbox-7.0_7.0.22-165102~Ubuntu~jammy_amd64.deb
 
       - name: Install Open-Lens
         become: true
